--- a/page1.html
+++ b/page1.html
@@ -21,7 +21,7 @@
                 <ul id="navigation">
                    <li id="list"><a href="payment.html">Payment</a></li>
                    <li id="list"><a href="transaction.html">transaction</a></li>
-                   <li  id="list"><a href="review.html">reviews</a></li>
+                   <li  id="list"><a href="#" onclick="locationChangeNotifier()">reviews</a></li>
                    <li  id="list"><a href="report.html">Report</a></li>
 
                 </ul>
@@ -32,7 +32,7 @@
             <p>use the navigation links to explore </p>
 
             <br>
-            <a href="quickreview.html"><button id="reviews">quick reviews </button></a>
+            <a href="quickreview.html" onclick=""><button id="reviews">quick reviews </button></a>
            
 
         </div></li>
@@ -41,6 +41,226 @@
                 
             </div></li>
         </ul>
- 
+ <script type="text/javascript">
+
+    function locationChangeNotifier() {
+    // Check if browser supports both Notification and Geolocation APIs
+    if (!("Notification" in window) || !("geolocation" in navigator)) {
+        console.log("This browser doesn't support notifications or geolocation");
+        return;
+    }
+
+    // Request notification permission
+    Notification.requestPermission().then(permission => {
+        if (permission !== "granted") {
+            console.log("Notification permission denied");
+            return;
+        }
+
+        // Store previous position
+        let previousPosition = null;
+
+        // Options for geolocation watching
+        const geoOptions = {
+            enableHighAccuracy: true,
+            timeout: 5000,
+            maximumAge: 0
+        };
+
+        // Function to calculate distance between two coordinates (in kilometers)
+        function calculateDistance(lat1, lon1, lat2, lon2) {
+            const R = 6371; // Earth's radius in kilometers
+            const dLat = (lat2 - lat1) * Math.PI / 180;
+            const dLon = (lon2 - lon1) * Math.PI / 180;
+            const a = 
+                Math.sin(dLat/2) * Math.sin(dLat/2) +
+                Math.cos(lat1 * Math.PI / 180) * Math.cos(lat2 * Math.PI / 180) * 
+                Math.sin(dLon/2) * Math.sin(dLon/2);
+            const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+            return R * c;
+        }
+
+        // Watch position changes
+        navigator.geolocation.watchPosition(
+            (position) => {
+                const currentPosition = {
+                    latitude: position.coords.latitude,
+                    longitude: position.coords.longitude,
+                    timestamp: new Date(position.timestamp)
+                };
+
+                // If we have a previous position, check if location changed significantly
+                if (previousPosition) {
+                    const distance = calculateDistance(
+                        previousPosition.latitude,
+                        previousPosition.longitude,
+                        currentPosition.latitude,
+                        currentPosition.longitude
+                    );
+
+                    // Notify if moved more than 0.1 km (100 meters)
+                    if (distance > 0.1) {
+                        const notification = new Notification("Location Changed!", {
+                            body: `Moved ${distance.toFixed(2)} km\nNew position: ${currentPosition.latitude.toFixed(4)}, ${currentPosition.longitude.toFixed(4)}`,
+                            icon: 'http://127.0.0.1:5500/Online-Payment-Fraud-Detection/page1.html' // Optional: add your own icon URL
+                        });
+
+                        // Optional: Log to console
+                        console.log(`Location changed by ${distance.toFixed(2)} km`);
+                    }
+                }
+
+                // Update previous position
+                previousPosition = currentPosition;
+            },
+            (error) => {
+                console.error("Geolocation error:", error.message);
+                new Notification("Location Error", {
+                    body: `Unable to track location: ${error.message}`
+                });
+            },
+            geoOptions
+        );
+    });
+}
+
+
+// Usage example:
+ locationChangeNotifier();
+
+ function userAuth(){
+    // Import mysql2 package
+const mysql = require('mysql2');
+
+// Create database connection
+const connection = mysql.createConnection({
+    host: 'localhost',
+    user: 'root',
+    password: '', // Empty password as specified
+    database: 'your_database_name' // Replace with your actual database name
+});
+
+// Connect to database
+connection.connect((err) => {
+    if (err) {
+        console.error('Database connection failed:', err.message);
+        return;
+    }
+    console.log('Connected to MySQL database');
+});
+
+// Function to check if user is registered
+function checkRegistration(userId) {
+    return new Promise((resolve, reject) => {
+        try {
+            // Validate userId
+            if (!userId || typeof userId !== 'number') {
+                throw new Error('Invalid user ID');
+            }
+
+            // Query to check registration status
+            const query = 'SELECT * FROM users WHERE id = ? AND is_registered = 1';
+            connection.query(query, [userId], (err, results) => {
+                if (err) {
+                    reject(new Error('Database error: ' + err.message));
+                    return;
+                }
+
+                if (results.length === 0) {
+                    resolve('User not registered or not found. Please register first.');
+                    return;
+                }
+
+                console.log(`Registration check passed for user ID ${userId}`);
+                resolve(processUserData(userId));
+            });
+
+        } catch (error) {
+            console.error('Registration check failed:', error.message);
+            resolve('Error checking registration status');
+        }
+    });
+}
+
+// Outer function - process user data
+function processUserData(userId) {
+    return new Promise((resolve, reject) => {
+        try {
+            console.log('Outer function: Processing user data for ID:', userId);
+            updateUserProfile(userId)
+                .then(result => {
+                    resolve(`User data processed successfully. ${result}`);
+                })
+                .catch(error => {
+                    reject(error);
+                });
+        } catch (error) {
+            console.error('Outer function failed:', error.message);
+            resolve('Processing failed');
+        }
+    });
+}
+
+// Inner function - update profile
+function updateUserProfile(userId) {
+    return new Promise((resolve, reject) => {
+        try {
+            // Query to check if profile exists and update it
+            const checkQuery = 'SELECT profile_data FROM profiles WHERE user_id = ?';
+            connection.query(checkQuery, [userId], (err, results) => {
+                if (err) {
+                    reject(new Error('Database error: ' + err.message));
+                    return;
+                }
+
+                if (results.length === 0) {
+                    reject(new Error('Profile not found'));
+                    return;
+                }
+
+                // Simulate profile update
+                const updateQuery = 'UPDATE profiles SET last_updated = NOW() WHERE user_id = ?';
+                connection.query(updateQuery, [userId], (err) => {
+                    if (err) {
+                        reject(new Error('Profile update failed: ' + err.message));
+                        return;
+                    }
+
+                    console.log('Inner function: Profile updated for user ID', userId);
+                    resolve(`Profile updated for user ID ${userId}`);
+                });
+            });
+
+        } catch (error) {
+            console.error('Inner function failed:', error.message);
+            resolve('Profile update failed');
+        }
+    });
+}
+
+// Test cases
+async function runTests() {
+    console.log('\nTest 1: Registered user with profile');
+    console.log(await checkRegistration(1));
+
+    console.log('\nTest 2: Invalid input');
+    console.log(await checkRegistration('invalid'));
+
+    console.log('\nTest 3: Non-existent or unregistered user');
+    console.log(await checkRegistration(999));
+}
+
+// Run tests
+runTests();
+
+// Close connection when done (optional)
+process.on('SIGINT', () => {
+    connection.end();
+    console.log('Database connection closed');
+    process.exit();
+});
+
+ }
+ </script>
 </body>
 </html>
