user interface screen

--- a/loginpage.html
+++ b/loginpage.html
@@ -22,6 +22,7 @@
             <br><br><br>
            <button type="submit" id="submit_button"> <a href="page1.html">login</a></button>
             <br>
+            <center><p><a href="" id="forgot2">forgot password?</a></p></center>
             <p id="forgot">Don't have account? <a href="sign_inpage.html">Register</a></p>
             
         </fieldset>
