added some report changes

--- a/opfdInterface.html
+++ b/opfdInterface.html
@@ -89,7 +89,7 @@
            <li> <button onclick="" id="payment"><a href="mpesa.html">payment</a></button></li>
            <li> <button onclick=""id="transactions"><a href="transcation.html">transaction</a></button></li>
            <li> <button onclick="locationChangeNotifier() "id="reviews">review</button></li>
-           <li> <button onclick=""id="report">report</button></li>
+           <li> <button onclick=""id="report"><a href="report.html">reports</a></button></li>
         </ul>
     </div>
     
@@ -199,6 +199,7 @@ function time(){
         document.getElementById('unusualLog').textContent="unusual login detected on ("+hours+" : "+minutes+`${a}`+ ") if not you change your pasword"
        
     }
+ 
    
 }
 time();
